text misalignment fix

--- a/nftartan/src/styles/FilterContainer.css
+++ b/nftartan/src/styles/FilterContainer.css
@@ -3,7 +3,6 @@
   display: inline;
   font-family: 'Oswald', sans-serif;
   font-size: 2.0rem;
-  margin: 0.5rem;
 }
 
 .share-btn {
